Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/Jet__c.object-meta.xml
<CustomObject>
    <label>Jet</label>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Jet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>