Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Jets</relationshipLabel>
    <relationshipName>Jets</relationshipName>
    <type>Lookup</type>
</CustomField>