Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Customer_lookup__c.field-meta.xml
<CustomField>
    <fullName>Customer_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer lookup</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Jets</relationshipLabel>
    <relationshipName>Jets</relationshipName>
    <type>Lookup</type>
</CustomField>