Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Flied_Hours__c.field-meta.xml
<CustomField>
    <fullName>Flied_Hours__c</fullName>
    <label>Flied Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>