Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Fuel_tank_capacity__c.field-meta.xml
<CustomField>
    <fullName>Fuel_tank_capacity__c</fullName>
    <label>Fuel tank capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>