Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Jet_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Jet_Capacity__c</fullName>
    <label>Jet Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>