Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Jet_Name__c.field-meta.xml
<CustomField>
    <fullName>Jet_Name__c</fullName>
    <label>Jet Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>