Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Max_Speed_ml_hr__c.field-meta.xml
<CustomField>
    <fullName>Max_Speed_ml_hr__c</fullName>
    <label>Max Speed ml/hr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>