Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Min_Required_Pilot_Hours__c.field-meta.xml
<CustomField>
    <fullName>Min_Required_Pilot_Hours__c</fullName>
    <label>Min Required Pilot Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>