Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <label>Model Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falcon</fullName>
            </value>
            <value>
                <fullName>Gerder</fullName>
            </value>
            <value>
                <fullName>Haldir</fullName>
            </value>
            <value>
                <fullName>Cheroki</fullName>
            </value>
            <value>
                <fullName>Carl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>