Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Next_Inspection_Left__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection_Left__c</fullName>
    <formula>CEILING(Current_Milage__c  / 1000) * 1000 - Current_Milage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Miles left to Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>