Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/fields/Total_flied_hours_on_jet__c.field-meta.xml
<CustomField>
    <fullName>Total_flied_hours_on_jet__c</fullName>
    <label>Total flied hours on jet</label>
    <summarizedField>Booking__c.Expected_Fly_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Booking__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking__c.Jet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>