Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/recordTypes/Select_a_status.recordType-meta.xml
<RecordType>
    <fullName>Select_a_status</fullName>
    <active>true</active>
    <label>Select a status</label>
</RecordType>