Desktop/Project/jetProject/force-app/main/default/main/default/objects/Jet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model_Name__c</columns>
    <columns>Flied_Hours__c</columns>
    <columns>Current_Milage__c</columns>
    <columns>Max_Seats__c</columns>
    <columns>Max_Speed_ml_hr__c</columns>
    <columns>Fuel_tank_capacity__c</columns>
    <columns>Jet_Weight__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Inspection__c</columns>
    <columns>Jet_Capacity__c</columns>
    <columns>Min_Required_Pilot_Hours__c</columns>
    <columns>Airport__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>